feat: remove async from apis
